# plataformasirax

./: Dockerfile  docker-compose.yml  package-lock.json  package.json
prisma/: schema.prisma
prisma/migrations/20260621_api_keys/: migration.sql
src/app/: page.tsx
src/app/api/v1/: route.ts
src/app/api/v1/check/: route.ts
src/app/api/v1/digital/email/: route.ts
src/app/api/v1/digital/phone/: route.ts
src/app/api/v1/digital/username/: route.ts
src/app/api/v1/footprint/: route.ts
src/app/api/v1/government/imss/: route.ts
src/app/api/v1/government/renapo/: route.ts
src/app/api/v1/government/rnd/: route.ts
src/app/api/v1/government/sat/: route.ts
src/app/api/v1/identity/curp/: route.ts
src/app/api/v1/identity/rfc/: route.ts
src/app/api/v1/keys/: route.ts
src/app/api/v1/keys/[id]/: route.ts
src/app/api/v1/sanctions/screen/: route.ts
src/app/api/v1/usage/: route.ts
src/lib/: api-auth.ts  generate-pdf.ts  with-api-auth.ts
src/lib/ai/: index.ts
src/lib/ai/providers/: groq.ts
synkdata/: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
synkdata/alembic/: env.py
synkdata/app/: __init__.py  config.py  database.py  dependencies.py  main.py
synkdata/app/integrations/: interpol.py  ofac.py  open_sanctions.py  sat_client.py  un_sanctions.py
synkdata/app/middleware/: auth.py  logging.py  rate_limit.py
synkdata/app/models/: __init__.py  analytics.py  base.py  digital_intelligence.py  identity.py  screening.py  verification.py
synkdata/app/routers/: analytics.py  curp.py  identity.py  rfc.py  risk.py  screening.py  verify.py
synkdata/app/schemas/: __init__.py  analytics.py  digital_intelligence.py  identity.py  screening.py  verification.py
synkdata/app/services/: __init__.py  ai_investigation.py  analytics_service.py  compliance_screening.py  curp_validator.py  email_intelligence.py  fuzzy_matcher.py  identity_correlation.py  knowledge_graph.py  ocr_service.py  phone_intelligence.py  rfc_validator.py  risk_engine.py  social_discovery.py  trust_score.py  username_intelligence.py
synkdata/app/static/css/: landing.css
synkdata/app/static/js/: landing.js
synkdata/app/templates/: landing.html
synkdata/app/utils/: __init__.py  curp_algorithm.py  phonetic.py  rfc_algorithm.py  text_normalizer.py
synkdata/docs/: api.yaml
synkdata/scripts/: init-db.sql  seed_data.py  setup_neo4j.py
synkdata/tests/: conftest.py  test_curp.py  test_identity_correlation.py  test_rfc.py  test_risk_engine.py  test_screening.py
tool-results/: read_1781592505385_485089694ebc.txt  read_1781593479039_02c7b847cefd.txt  read_1781594460236_02420a46251d.txt  read_1781595962162_9eff13fe2f44.txt
